# tron

./: .env  .gitignore  Dockerfile  README.md  check.sh  docker-compose.yaml  pyproject.toml  task.txt
app/: config.py  main.py
app/api/: router.py
app/dao/: base.py  database.py  db.py
app/tron/: dao.py  methods.py  models.py  schemas.py
app/utils/: session_maker.py  tron_info.py
tests/: test_api.py  test_db.py
