[project]
name = "tronadd"
version = "0.1.0"
description = "Microservice for retrieving TRON address information."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "mypy>=1.17.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-pythonpath>=0.7.3",
    "sqlalchemy>=2.0.42",
    "tronpy>=0.6.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "testcontainers[postgresql]>=4.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "E", "F", "W", "Q"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
case-sensitive = true
force-wrap-aliases = true
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = true

[tool.mypy]
python_version = 3.12
strict_equality = true
show_error_codes = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_no_return = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_untyped_calls = true
pretty = true
color_output = true
no_namespace_packages = true
disable_error_code = ["misc"]
exclude = "^tests/"

[pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = "."
